--- a/content/dic/bussysteme/rs232.md
+++ b/content/dic/bussysteme/rs232.md
@@ -7,7 +7,11 @@ Bei der seriellen Datenübertragung werden Bits (oder genauer Symbole) zeitlich 
 Ein für jede serielle Übertragung wichtiger Begriff ist die *Baudrate*. Sie definiert die Anzahl der Symbole pro Sekunde. Dabei werden auch Symbole zur Synchronisierung mitgerechnet und unterscheidet sich damit von der eigentlichen Datenübertragungsrate.
 
 # Aufbau RS232
-<figure><img src="rs232_timing.png"><figcaption>RS232 Timingdiagramm (Bild: <a href="https://commons.wikimedia.org/wiki/File:RS-232_timing.png">Gerald.deppe</a> Public Domain)</figcaption></figure>
+.. figure:: rs232_timing.png
+    :title: RS232 Timingdiagramm
+    :author: Gerald.deppe
+    :source: https://commons.wikimedia.org/wiki/File:RS-232_timing.png
+    :license: Public Domain
 
 # Übertragungsparameter
 Zur Beschreibung der Übertragung einer RS232 Schnittstelle benötigt man folgende Parameter:
