Extended ml.slides

--- a/content/wdic/maschinelles_lernen/lineare_regression.ipynb
+++ b/content/wdic/maschinelles_lernen/lineare_regression.ipynb
@@ -1,8 +1,19 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lineare Regression\n",
+    "## Definition von 4 Datensätzen\n",
+    "* Verwendung von [Numpy](https://numpy.org/)\n",
+    "* Mehr Infos zum [Anscombe-Quartett](https://de.wikipedia.org/wiki/Anscombe-Quartett)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +28,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Darstellung des Datensatzes"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +46,7 @@
        "(0.0, 20.0, 0.0, 13.0)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -50,8 +69,19 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Frage: Wie können wir eine Gerade fitten?\n",
+    "\n",
+    "## Erstellen des Linearen Regressions Models\n",
+    "* Funktionalität aus der Bibliothek [scikit-learn](https://scikit-learn.org/)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -60,25 +90,33 @@
        "'y = 3.00 + 0.50 * x, r² = 0.667'"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
-    "import numpy as np\n",
     "\n",
-    "model = LinearRegression(fit_intercept=True)\n",
-    "x_reshape = x[:, np.newaxis]\n",
+    "x_reshape = x[:, np.newaxis]  # umformung von x in einen Spaltenvektor\n",
+    "\n",
+    "model = LinearRegression(fit_intercept=True)  # fit_intercept -> Offset soll auch berücksichtigt werden\n",
     "model.fit(x_reshape, y)\n",
     "\n",
-    "f'y = {model.intercept_:.2f} + {model.coef_[0]:.2f} * x, r² = {model.score(x_reshape, y):.3f}'"
+    "f'y = {model.intercept_:.2f} + {model.coef_[0]:.2f} * x, r² = {model.score(x_reshape, y):.3f}'  # Ausgabe der Geradengleichung und r²"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot der linearen Approximation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +125,7 @@
        "(0.0, 20.0, 0.0, 13.0)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     },
