Typos in Bussysteme

--- a/content/dic/bussysteme/rs232.md
+++ b/content/dic/bussysteme/rs232.md
@@ -2,11 +2,11 @@ title: Serielle Datenübertragung mittels RS232
 parent: uebersicht.md
 
 # Allgemeines
-Bei der seriellen Datenübertragung werden Bits (oder genauer Symbole) zeitlich hintereinander über eine Leitung übertragen. Die Anordnung der Bits, das Verpacken in einen Übertragungsrahmen (Frame) und die physikalischen Pegel werden durch das verwendete Protokoll definiert. Ein oft verwendeter Standard ist hier *RS232* (bezeichnet oft auch mit *EIA-RS-232* oder *CCITT-V.24*).
+Bei der seriellen Datenübertragung werden Bits (genauer: Symbole) zeitlich hintereinander über eine Leitung übertragen. Die Anordnung der Bits, das Verpacken in Übertragungsrahmen (Frames) sowie die elektrischen Pegel werden durch das verwendete Protokoll definiert. Ein verbreiteter Standard ist *RS232* (auch *EIA-RS-232* oder *CCITT-V.24* genannt).
 
-Ein für jede serielle Übertragung wichtiger Begriff ist die *Baudrate*. Sie definiert die Anzahl der Symbole pro Sekunde. Dabei werden auch Symbole zur Synchronisierung mitgerechnet und unterscheidet sich damit von der eigentlichen Datenübertragungsrate.
+Ein zentraler Begriff bei jeder seriellen Übertragung ist die *Baudrate*. Sie definiert die Anzahl der übertragenen Symbole pro Sekunde. Dabei werden auch Synchronisierungsbits mitgezählt – die Baudrate unterscheidet sich daher von der tatsächlichen Datenrate.
 
-# Aufbau RS232
+# Aufbau von RS232
 .. figure:: rs232_timing.png
     :title: RS232 Timingdiagramm
     :author: Gerald.deppe
@@ -14,15 +14,28 @@ Ein für jede serielle Übertragung wichtiger Begriff ist die *Baudrate*. Sie de
     :license: Public Domain
 
 # Übertragungsparameter
-Zur Beschreibung der Übertragung einer RS232 Schnittstelle benötigt man folgende Parameter:
+Für die Kommunikation über eine RS232-Schnittstelle sind folgende Parameter relevant:
 
-* **Anzahl der Datenbits**: Üblicherweise 8 Bit. Teilweise aber auch 5,6,7 oder 9 Bit.
-* **Parität**: Nach den Datenbits kann ein Paritätsbit übertragen werden. Es kann gerade Parität (beschrieben durch `E` für *even*) oder ungerade Parität (`O` für *odd*) verwendet werden. Wird keine Parität verwendet, wird dies durch `N` beschrieben.
-* **Anzahl der Stoppbits**: Meist wird 1 Stoppbit verwendet. Es sind aber auch 2 Stoppbits möglich.
+* **Anzahl der Datenbits**: Üblicherweise 8 Bit, aber auch 5, 6, 7 oder 9 Bit sind möglich.
+* **Parität**: Ein optionales Paritätsbit dient der Fehlererkennung. Es kann gerade (*even*, `E`) oder ungerade (*odd*, `O`) sein. Bei fehlender Parität: `N`.
+* **Anzahl der Stoppbits**: Meist wird 1 Stoppbit verwendet, optional auch 2.
 
-Zusammen mit der Baudrate schaut eine Beschreibung zum Beispiel so aus: `38400 Baud 8O1` - sprich 38400 Baud mit 8 Datenbits, ungerade Parität und ein Stoppbit.
+Ein vollständiger Parameterstring sieht z. B. so aus: `38400 Baud 8O1` – das bedeutet 38400 Baud, 8 Datenbits, ungerade Parität, 1 Stoppbit.
 
-Sender und Empfänger einer seriellen Übertragung müssen die gleichen Übertragungsparameter einstellen, um eine Datenübertragung zu ermöglichen. Bei der Baudrate gibt es systembedingt oft Abweichungen. Dies einzelne Baudrate sollte +/- 2 Prozent Abweichung nicht überschreiten (bei 8N1).
+Sender und Empfänger müssen dieselben Parameter verwenden. Bei der Baudrate darf die Abweichung maximal etwa ±2 % betragen (bei 8N1), um eine fehlerfreie Kommunikation sicherzustellen.
 
-Zu den gängisten Baudrates zählen 4800 Baud, 9600 Baud, 19200 Baud 38400 Baud, 57600 Baud und 115200 Baud. Es finden auch
-125kBaud, 250kBaud, 500kBaud und 1MBaud in der Praxis Verwendung.
+Typische Baudraten:
+
+* 4800 Baud
+* 9600 Baud
+* 19200 Baud
+* 38400 Baud
+* 57600 Baud
+* 115200 Baud
+
+In industriellen Anwendungen auch:
+
+* 125 kBaud
+* 250 kBaud
+* 500 kBaud
+* 1 MBaud
